fixed alignment issue

--- a/cssAssignment1.css
+++ b/cssAssignment1.css
@@ -72,7 +72,7 @@ html, body {
     padding: 20px;
     position: relative;
     float: left;
-    left: 20%;
+    left: 30%;
 }
 
 .About_Me_Main ul {
