--- a/idealJobA1.css
+++ b/idealJobA1.css
@@ -12,9 +12,6 @@ html, body {
 .cover-nav ul {
     margin: 0;
     text-align: center;
-    position: absolute;
-    bottom: 85%;
-    left: 30%;
 }
 
 .cover-nav li {
