--- a/personalProfile.css
+++ b/personalProfile.css
@@ -12,9 +12,6 @@ html, body {
 .cover-nav ul {
     margin: 0;
     text-align: center;
-    position: absolute;
-    bottom: 85%;
-    left: 30%;
 }
 
 .cover-nav li {
@@ -81,6 +78,7 @@ html, body {
     position: relative;
     text-align: left;
 }
+
 
 .footer {
     position: relative;
